<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <!--
        <CheckBoxPreference
            android:key="example_checkbox"
            android:title="@string/pref_title_social_recommendations"
            android:summary="@string/pref_description_social_recommendations"
            android:defaultValue="true" />
    -->

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:title="@string/pref_location_label"
        android:key="@string/pref_location_key"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true"
        android:positiveButtonText="@android:string/ok"
        android:negativeButtonText="@android:string/cancel"
        />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->

    <ListPreference
        android:title="@string/pref_temperature_unit_label"
        android:key="@string/pref_temperature_unit_key"
        android:defaultValue="@string/pref_temperature_unit_metric"
        android:entries="@array/pref_temperature_unit_options"
        android:entryValues="@array/pref_temperature_unit_values"
        android:negativeButtonText="@android:string/cancel"
        android:positiveButtonText="@android:string/ok"
        />

</PreferenceScreen>
